tests/errors/semantics/member_reference_not_struct_pointer.c
// Member reference type is not a structure pointer
void main()
{
	int not_struct = 0;
	not_struct->year;
}
